# whisper-bot

./: Dockerfile  pyproject.toml  run.py  sample.env
.github/workflows/: main.yml
archive/dev/: michael_example.py  todo.md
archive/useless/: run.py
archive/useless/tests/: test_bot.py
archive/whisper_bot/core/: __init__.py  app.py  app_config.py  telegram_bot.py
archive/whisper_bot/utils/: text_utils.py
tests/: test_app.py  test_imports.py
whisper_bot/: app.py  bot.py  handler.py
whisper_bot/core/: __init__.py  app.py  app_config.py  telegram_bot.py
whisper_bot/utils/: text_utils.py
