[tool.poetry]
name = "whisper-bot"
version = "2.0.0"  # rework audio parser for memory efficiency
description = ""
authors = ["Petr Lavrov <petr.b.lavrov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.10.0"
pydub = "^0.25.1"
openai = "^1.35.13"
bot-lib = { git = "https://github.com/calmmage/bot-lib.git", branch = "main" }
tgcrypto = "^1.2.5"
ffprobe = "^0.5"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = "*"
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
